manifests/cilium/postinstall2/overlays/lab/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cilium-hubble-routing-dashboard
  namespace: kube-system
spec:
  parentRefs:
  - name: clusteringress-frontdoor
    sectionName: https
    namespace: gatewayapi
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - hubble.hunt.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
      weight: 1
      kind: Service
